--- a/students/Royal/page1-part2/css/infomation.css
+++ b/students/Royal/page1-part2/css/infomation.css
@@ -29,6 +29,15 @@
     margin: 8px;
 }
 
+.infomation ._next{
+    width: 20px;
+    height: 20px;
+    transform:rotate(90deg);
+    position: absolute;
+    left: 50%;
+    bottom: 15%;
+}
+
 .index_test_btn_container{
     position: fixed;
     height: 69px;
@@ -41,4 +50,16 @@
 .index_test_btn{
     height: 69px;
     width: 78px;
+}
+
+@media(max-width: 767px){
+    .infomation{
+        height: 480px;
+    }
+    .infomation .information_content .infoTitle{
+        font-size: 26px;
+    }
+    .infomation .information_content .infoDetail{
+        font-size: 18px;   
+    }
 }
