--- a/students/Royal/page1-part2/css/nav.css
+++ b/students/Royal/page1-part2/css/nav.css
@@ -4,6 +4,7 @@ nav{
     background-color: rgba(250, 250, 250, 0.8);
     position: fixed;
     z-index: 1;
+    
 }
 
 nav .nav_logo{
@@ -13,65 +14,11 @@ nav .nav_logo{
     width: 134px;
 }
 
-nav .nav_list{
-    background-color: rgba(250, 250, 250, 0.8);
-    color: rgb(128, 128, 128);
+
+.nav_list{
     list-style: none;
-    margin: 0;  
-    padding: 0;
-    top: 90px;
-    position: absolute;
-    width: 100%;
-    display: none;
-
 }
 
-nav .nav_list .nav_list_items{
-    padding: 16px 0px;
-    padding-left: 64px;
-    cursor: pointer;
-    letter-spacing: 3px;
-}
-
-nav .nav_list .nav_list_items .nav_search{
-    width: 24px;
-    height: 24px;
-
-}
-
-nav .fas{
-    font-size: 32px;
-    float: right;
-    margin: 18px;
-    cursor: pointer;
-}
-
-nav .nav_list .nav_list_items:hover{
-    background-color: rgba(0, 0, 0, 0.1);
-    color: rgb(26, 216, 211);
-}
-
-
-@media(min-width: 768px){
-    nav .fas{
-        display: none;
-    }
-
-    nav .nav_list{
-        display: block !important;
-        float: right;
-        top: auto;
-        position: static;
-        width: auto;
-        height: inherit;
-        background-color: transparent;
-    }
-
-    nav .nav_list .nav_list_items{
-        padding-right: 32px;
-        padding-top: 32px;
-        float: left; 
-    }
-
-
+.nav_list_items{
+    
 }
