--- a/students/Royal/page1-part2/css/infomation.css
+++ b/students/Royal/page1-part2/css/infomation.css
@@ -23,6 +23,10 @@
     margin: 0;
 }
 
+.infomation .information_content .infoTitle:hover{
+    transform: rotate(-5deg);
+}
+
 .infomation .information_content .infoDetail{
     font-size: 24px;
     letter-spacing: 8px;
@@ -30,12 +34,15 @@
 }
 
 .infomation ._next{
+    background: url(../images/next.svg);
+    background-size: cover;
     width: 20px;
     height: 20px;
     transform:rotate(90deg);
     position: absolute;
     left: 50%;
     bottom: 15%;
+    animation: arrowUpDownMove 0.3s infinite alternate;
 }
 
 .index_test_btn_container{
@@ -45,12 +52,43 @@
     bottom: 20%;
     right: 2%;
     z-index: 1;
+    opacity: 0.8;
+    transition: bottom 4s ease;
+
 }
 
 .index_test_btn{
     height: 69px;
     width: 78px;
 }
+
+.index_test_btn_container:hover{
+    bottom: 25%;
+    opacity: 0.6;
+    
+}
+
+@keyframes indexTestBtnMove{
+    0%   {bottom: 90%;}
+    100% {bottom: 20%;}
+}
+
+@-webkit-keyframes indexTestBtnMove{
+    0%   {bottom: 90%;}
+    100% {bottom: 20%;}
+}
+
+@-moz-keyframes indexTestBtnMove{
+    0%   {bottom: 90%;}
+    100% {bottom: 20%;}
+}
+
+@-o-keyframes indexTestBtnMove{
+    0%   {bottom: 90%;}
+    100% {bottom: 20%;}
+}
+
+
 
 @media(max-width: 767px){
     .infomation{
@@ -63,3 +101,8 @@
         font-size: 18px;   
     }
 }
+
+
+
+
+
