--- a/students/Royal/page1-part2/css/test.css
+++ b/students/Royal/page1-part2/css/test.css
@@ -11,6 +11,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: 0.8s;
+}
+
+.test:hover{
+    height: 640px;
 }
 
 
@@ -29,6 +34,13 @@
     padding: 6px 24px;
     border-radius: 8px;
     cursor: pointer;
+    transition: 1s;
+}
+
+.test .test_btn:hover{
+    padding: 8px 26px;
+    font-size: 20px;
+    width: 88px;
 }
 
 @media(max-width: 767px){
