--- a/students/Royal/page1-part2/css/top.css
+++ b/students/Royal/page1-part2/css/top.css
@@ -4,11 +4,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .top .top_btn{
     width: 36px;
     height: 46px;
+    cursor: pointer;
+/*    transition: 0.6s;*/
+}
+
+.top .top_btn:hover{
+    width: 50px;
+    height: 60px;
 }
 
 @media(max-width: 767px){
