--- a/students/Royal/page1-part2/css/article.css
+++ b/students/Royal/page1-part2/css/article.css
@@ -1,19 +1,35 @@
 /* slide poster */
 .slidePoster_section{
-     margin-bottom: 8px;
+     margin-bottom: 0px;
 }
-.slide_poster{
-    background: url(../images/information.jpg);
+
+.slide{
+    width: 100%;
+}
+
+
+
+.slide .slide_img{
     background-size: cover;
     width: 100%;
     height: 380px; 
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    transition: opacity 0.8s;
+    opacity: 1;
+    animation :slideOpacityOut 5s ease 0s 1 alternate both;
 }
 
-.slide_poster .slide_title{
+.slide_img .slide_title_container{
+    width: inherit;
+    height: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.slide_img .slide_title_container .slide_title{
+    position: absolute;
+    top: 36%;
     font-size: 24px;
     color: white;
     letter-spacing: 10px;
@@ -21,9 +37,46 @@
     border-radius: 5px;
     padding: 10px 6px;
     padding-left: 24px;
+    width: 300px;
+    text-align: center;
 }
 
+/* slideOpacityOut animation */
+@keyframes slideOpacityOut{
+    0%  {opacity: 0;}
+    25% {opacity: 1;}
+    50% {opacity: 1;}
+    75% {opacity: 1;}
+    100%{opacity: 0;}
+}
+
+@-webkit-keyframes slideOpacityOut {
+    0%  {opacity: 0;}
+    25% {opacity: 1;}
+    50% {opacity: 1;}
+    75% {opacity: 1;}
+    100%{opacity: 0;}
+}
+@-moz-keyframes slideOpacityOut {
+    0%  {opacity: 0;}
+    25% {opacity: 1;}
+    50% {opacity: 1;}
+    75% {opacity: 1;}
+    100%{opacity: 0;}
+}
+@-o-keyframes slideOpacityOut {
+    0%  {opacity: 0;}
+    25% {opacity: 1;}
+    50% {opacity: 1;}
+    75% {opacity: 1;}
+    100%{opacity: 0;}
+}
+
+
+
 /* tag box css */
+.tagBox_section{
+}
 .tag_box{
     width: 100%;
     height: 70px;
@@ -45,7 +98,7 @@
 }
 
 /* article css */
-.article{
+#article{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -54,12 +107,14 @@
     padding: 0px 60px 70px 60px;
     height: auto;
 }
-.article_card{
+#article .article_card{
     border: 1px solid rgb(26,216,211);
     padding: 15px;
     margin: 10px;
 }
-.article .article_card > div{
+
+/* locationContainer + x */
+#article .article_card > div{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -67,30 +122,35 @@
     margin: 30px 0 15px 0;
 }
 
-.article .article_card > div > .location_img{
+#article .article_card > div > .location_img{
     background: url(../images/location_icon.png);
     width: 17.14px;
     height: 23.7px;
     background-size: cover;
 }
 
-.article .article_card > div > a > .article_location{
+/* aLocation + x */
+#article .article_card > div > a{
+    
+}
+
+#article .article_card > div > a > .article_location{
     font-size: 16px;
     color: rgb(125, 125, 125);
     padding: 0 5px;
     cursor: pointer;
 }
 
-.article .article_card > div > a > .article_location:hover{
+#article .article_card > div > a > .article_location:hover{
     opacity: 0.5;
 }
 
-.article .article_card > a{
+#article .article_card .article_content{
     text-decoration: none;
     color: inherit;
 }
 
-.article .article_card > a > .article_img_container{
+#article .article_card > .article_content > .article_img_container{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -101,7 +161,7 @@
     overflow: hidden;
 }
 
-.article .article_card > a > .article_img_container .article_img{
+#article .article_card > .article_content > .article_img_container .article_img{
     width: 200px;
     height: 200px;
     max-height: 100%;
@@ -111,33 +171,34 @@
     transition: all 1s;
 }
 
-.article .article_card > a > .article_img_container .article_img:hover{
+#article .article_card > .article_content > .article_img_container .article_img:hover{
     transform: scale(1.2);
 }
 
-.article .article_card > a > .article_title{
+#article .article_card > .article_content > .article_title{
     font-size: 26px;
     color: rgb(26,216,211);
     text-align: center;
 /*                    line-height: 38px;*/
 }
 
-.article .article_card > a > .article_title:hover{
+#article .article_card >.article_content > .article_title:hover{
     opacity: 0.5;
 }
 
-.article .article_card > a > .article_detail{
+#article .article_card > .article_content > .article_detail{
     padding: 0 30px;
     text-align: center;
     width: 240px;
     line-height: 24px;
+    
 }
 
-.article .article_card > a > .article_detail:hover{
+#article .article_card > .article_content > .article_detail:hover{
     opacity: 0.5;
 }
 
-.article .article_card > a > .read_more{
+#article .article_card > .article_content > .read_more{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -146,19 +207,19 @@
     margin: 5px 0px 50px 0px;
 }
 
-.article .article_card > a > .read_more .read_more_word{
+#article .article_card > .article_content > .read_more .read_more_word{
     color: rgb(26,216,211);
     width: 120px;
     text-align: right;
     transition: margin-right 1s;
 }
 
-.article .article_card > a > .read_more .read_more_word:hover{
+#article .article_card > .article_content > .read_more .read_more_word:hover{
     opacity: 0.5;
     margin-right: 24px;
 }
 
-.article .article_card > a > .read_more .read_more_icon{
+#article .article_card > .article_content > .read_more .read_more_icon{
     background: url(../images/read_more_icon.png);
     width: 10px;
     height: 10px;
@@ -167,7 +228,7 @@
     margin: 4.5px 0 0 5px;
 }
 
-.article_card .tag_line{
+#article .article_card .tag_line{
     border-top: 1px solid rgb(26, 216, 211);
     width: 220px;
     height: 20px;
@@ -176,20 +237,20 @@
 }
 
 @media(max-width: 841px){
-    .article{
+    #article{
         padding: 0 0px;
     }
-    .article_card{
+    #article .article_card{
         border: none;   
         padding: 0 8px;
         margin: 0px 0px 10px 0px;
     }
 
-    .article_card .tag_line{
+    #article .article_card .tag_line{
         display: block !important;
     }
 
-    .article .article_card > div{
+    #article .article_card > div{
         margin: 0px 0 10px 0;
     }
 }
