--- a/students/Royal/page1-part2/css/common.css
+++ b/students/Royal/page1-part2/css/common.css
@@ -193,6 +193,8 @@ nav .nav_content_container .nav_search_icon:hover{
     width: 90%;
     height: 32px;
     border: none;
+    padding-left: 8px;
+    font-size: 16px;
 }
 
 .searchBar_icon{
