--- a/students/Royal/page1-part2/css/common.css
+++ b/students/Royal/page1-part2/css/common.css
@@ -218,6 +218,66 @@ nav .nav_content_container .nav_search_icon:hover{
     }
 }
 
+
+/* test layout css */
+.test_layout{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    background-color: rgba(192, 192, 192, 0.3);
+    z-index: 1;
+
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.test_layout .test_container{
+    width: 350px;
+    height: 450px;
+    background-color: rgba(26,216,211, 0.8);
+    letter-spacing: 3px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.test_layout .test_container .test_header{
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.test_layout .test_container .test_preface{
+    color: white;
+    font-size: 16px;
+    padding: 20px 50px 0 50px;
+    line-height: 24px;
+}
+
+.test_layout .test_container .test_start_btn{
+    width: 100px;
+    height: 40px;
+    color: rgb(26,216,211);
+    text-align: center;
+    line-height: 40px;
+    margin-top: 40px;
+    padding: 0 23px;
+    background-color: white;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.test_layout .test_container .test_start_btn:hover{
+    color: white;
+    background-color: rgba(255,255,255,.5);
+}
+
 /* top css*/
 
 .top{
