--- a/page1/part2/all.css
+++ b/page1/part2/all.css
@@ -54,18 +54,13 @@ table {
     background: white;
     opacity: 0.8;
     position: fixed;
-<<<<<<< HEAD
     width: 100%;
 
-=======
-    width: 1519px;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
 }
 .header a:hover{
     transform: scale(1.2,1.2);
 }
 .logo{
-<<<<<<< HEAD
     width: 150px;
     margin-left: 20%;
 }
@@ -75,17 +70,6 @@ table {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-=======
-    width: 134px;
-    margin-left: 60px;
-}
-.title{
-    width: 607px;
-    line-height: 99px;
-    display: flex;
-    justify-content: space-around;
-    margin-right: 60px;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
 }
 .title a:hover{
     color: rgb(26,216,211);
@@ -99,10 +83,6 @@ table {
 .search{
     width: 18px;
 }
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
 .textgo{
     width: 78px;
     position: fixed;
@@ -110,34 +90,19 @@ table {
     top: 500px;
     opacity: 0.7;
 }
-<<<<<<< HEAD
-@media (min-width: 479px){
-    .title{
-        width: 60%;
-    }
-}
 
-=======
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
+
 
 .bg1{
     max-width: 1519px;
     height: 710px;
     background-image: url(https://frankyeah.github.io/Front-Enter/images/key-visual.jpg);
-<<<<<<< HEAD
     background-position: top;
-=======
-    background-position: center;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
     margin-bottom: 10px;
 }
 .bg1word1{
     padding-top: 370px;
-<<<<<<< HEAD
     text-align: center;
-=======
-    padding-left: 620px;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
     color: white;
     font-size: 38px;
     font-family: "Noto Sans TC";
@@ -148,11 +113,7 @@ table {
     transform: rotate(-5deg);
 }
 .bg1word2{
-<<<<<<< HEAD
     text-align: center;
-=======
-    padding-left: 685px;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
     color: white;
     font-size: 24px;
     font-family: "Noto Sans TC";
@@ -183,7 +144,6 @@ table {
 }
 .bg2word1{
     padding-top: 250px;
-<<<<<<< HEAD
     color: white;
     font-size: 18px;
     line-height: 36px;
@@ -194,50 +154,24 @@ table {
     font-size: 18px;
     line-height: 36px;
     text-align: center;
-=======
-    padding-left: 620px;
-    color: white;
-    font-size: 18px;
-    line-height: 36px;
-}
-.bg2word2{
-    padding-left: 655px;
-    color: white;
-    font-size: 18px;
-    line-height: 36px;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
 }
 .btn{
     width: 128px;
     font-size: 18px;
     line-height: 30px;
     margin-top: 24px;
-<<<<<<< HEAD
     display: block;
     margin: 0 auto;
-=======
-    margin-left: 690px;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
     border: 1px solid rgb(26,216,211);
     border-radius: 5px;
     background: transparent;
     color: rgb(26,216,211);
-<<<<<<< HEAD
     margin-top: 20px;
-=======
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
 }
 .btn:hover{
     transform: scale(1.3,1.3);
 }
-<<<<<<< HEAD
-@media (min-width: 479px){
-    .bg2{
-        background-attachment: none;
-    }
-}
-=======
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
+
 
 .bg3{
     max-width: 1519px;
@@ -251,17 +185,10 @@ table {
 }
 .bg3word1{
     padding-top: 180px;
-<<<<<<< HEAD
     color: white;
     font-size: 20px;
     line-height: 36px;
     text-align: center;
-=======
-    padding-left: 700px;
-    color: white;
-    font-size: 20px;
-    line-height: 36px;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
 }
 .course{
     width: 228px;
@@ -273,12 +200,9 @@ table {
     border-radius: 5px;
     background: transparent;
     color: rgb(26,216,211);
-<<<<<<< HEAD
     display: block;
     margin: 0 auto;
     margin-top: 30px;
-=======
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
 }
 .course:hover{
     transform: scale(1.3,1.3);
@@ -306,30 +230,30 @@ table {
 }
 .pen{
     width: 40px;
-    margin-left: 180px;
+    margin-left: 53%;
     margin-top: 80px;
 }
 .search1{
-    margin-left: 170px;
+    margin-left: 50%;
     margin-top: 30px;
     font-size: 24px;
     color: rgb(26,216,211);
 }
 .border{
-    margin-left: 168px;
+    margin-left: 50%;
     margin-top: 30px;
     width: 48px;
     border: 1px solid rgb(26,216,211);
     padding: 0.5px;
 }
 .text{
-    margin-left: 60px;
+    margin-left: 20%;
     margin-top: 20px;
     line-height: 30px;
     text-align: center;
 }
 .school{
-    margin-left: 135px;
+    margin-left: 40%;
     margin-top: 30px;
     width: 120px;
     font-size: 18px;
@@ -343,30 +267,30 @@ table {
 }
 .pen2{
     width: 40px;
-    margin-left: 175px;
+    margin-left: 51%;
     margin-top: 80px;
 }
 .search2{
-    margin-left: 155px;
+    margin-left: 45%;
     margin-top: 30px;
     font-size: 24px;
     color: rgb(26,216,211);
 }
 .border2{
-    margin-left: 165px;
+    margin-left: 48%;
     margin-top: 30px;
     width: 48px;
     border: 1px solid rgb(26,216,211);
     padding: 0.5px;
 }
 .text2{
-    margin-left: 60px;
+    margin-left: 15%;
     margin-top: 20px;
     line-height: 30px;
     text-align: center;
 }
 .school2{
-    margin-left: 135px;
+    margin-left: 40%;
     margin-top: 30px;
     width: 120px;
     font-size: 18px;
@@ -378,15 +302,7 @@ table {
 .school2:hover{
     color: rgb(207, 206, 206);
 }
-<<<<<<< HEAD
-@media (min-width: 479px){
-    .bg4{
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
-=======
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
+
 
 .bg5{
     max-width: 1519px;
@@ -397,24 +313,17 @@ table {
 }
 .bg5word1{
     padding-top: 370px;
-<<<<<<< HEAD
     color: white;
     font-size: 24px;
     text-align: center;
-=======
-    padding-left: 730px;
-    color: white;
-    font-size: 24px;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
 }
 .bg5word2{
     width: 20px;
     border: 1px solid white;
-<<<<<<< HEAD
     margin-top: 16px;
     margin-bottom: 16px;
     padding-top: 1px;
-    margin-left: 47%;
+    margin-left: 49.5%;
 }
 .bg5word3{
     color: white;
@@ -423,35 +332,13 @@ table {
     text-align: center;
 }
 .bg5word4{
-=======
-    margin-left: 743px;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    padding-top: 1px;
-}
-.bg5word3{
-    padding-left: 460px;
-    color: white;
-    font-size: 18px;
-    line-height: 30px;
-}
-.bg5word4{
-    padding-left: 460px;
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
     margin-top: 16px;
     color: white;
     font-size: 18px;
     line-height: 30px;
-<<<<<<< HEAD
     text-align: center;
 }
-@media (min-width: 479px){
-    .bg5word2{
-        margin-left: 49.25%;
-    }
-=======
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
-}
+
 
 .button{
     height: 186px;
@@ -498,10 +385,82 @@ table {
 }
 .line{
     width: 30px;
-<<<<<<< HEAD
 }
 
-
-=======
+@media (max-width: 479px){
+    .header{
+        display: flex;
+        justify-content: space-around;
+    }
+    .title{
+        width: 200px;
+    }
+    .bg2{
+        background-attachment: none;
+    }
+    .bg4{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .frame{
+        width: 224px;
+        height: 336px;
+    }
+    .pen{
+        width: 30px;
+        margin-top: 60px;
+        margin-left: 55%;
+    }
+    .search1{
+        font-size: 16px;
+        margin-top: 20px;
+        margin-left: 55%;
+    }
+    .border{
+        margin-top: 20px;
+    }
+    .text{
+        font-size: 14px;
+    }
+    .school{
+        font-size: 14px;
+        margin-left: 35%;
+    }
+    .pen2{
+        width: 30px;
+        margin-top: 60px;
+        margin-left: 55%;
+    }
+    .search2{
+        font-size: 16px;
+        margin-top: 20px;
+        margin-left: 50%;
+    }
+    .border2{
+        margin-top: 20px;
+    }
+    .text2{
+        font-size: 14px;
+    }
+    .school2{
+        font-size: 14px;
+        margin-left: 35%;
+    }
+    .bg5word3{
+        text-align: left;
+    }
+    .bg5word3 br{
+        content: "";
+        display: none;
+    }
+    .bg5word4{
+        text-align: left;
+    }
+    .bg5word4 br{
+        content: "";
+        display: none;
+    }
+    .bg5word2{
+        margin-left: 49.25%;
+    }
 }
->>>>>>> 1a99bb28fe5ec2108c15eb6263028eb3e1e60f98
