--- a/page1/part2/all.css
+++ b/page1/part2/all.css
@@ -52,24 +52,25 @@ table {
     justify-content: space-between;
     align-items: center;
     background: white;
-    opacity: 0.8;
+    opacity: 1;
     position: fixed;
     width: 100%;
+    padding-left: 5%;
 
 }
 .header a:hover{
     transform: scale(1.2,1.2);
+    transition: all 1s ease-out;
 }
 .logo{
     width: 150px;
-    margin-left: 20%;
 }
 .title{
-    width: 30%;
+    width: 60%;
     line-height: 99px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 .title a:hover{
     color: rgb(26,216,211);
@@ -87,9 +88,23 @@ table {
     width: 78px;
     position: fixed;
     right: 0;
-    top: 500px;
+    top: 400px;
     opacity: 0.7;
+    transition: transform 3s ease;
 }
+.textgo:hover{
+    cursor: pointer;
+    transform: translateY(-50%);
+}
+@keyframes textgoup {
+    form{
+        top: 400px;
+    }
+    to{
+        top: 200px;
+    }
+}
+
 
 
 
@@ -99,15 +114,18 @@ table {
     background-image: url(https://frankyeah.github.io/Front-Enter/images/key-visual.jpg);
     background-position: top;
     margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .bg1word1{
-    padding-top: 370px;
     text-align: center;
     color: white;
     font-size: 38px;
     font-family: "Noto Sans TC";
     font-weight: 700;
     line-height: 48px;
+    letter-spacing: 6px;  
 }
 .bg1word1:hover{
     transform: rotate(-5deg);
@@ -117,6 +135,8 @@ table {
     color: white;
     font-size: 24px;
     font-family: "Noto Sans TC";
+    letter-spacing: 12px;
+    margin-top: 8px;
 }
 .arrow{
     display: block;
@@ -167,9 +187,15 @@ table {
     background: transparent;
     color: rgb(26,216,211);
     margin-top: 20px;
+    
+}
+.bg2 a{
+    text-decoration: none;
 }
 .btn:hover{
     transform: scale(1.3,1.3);
+    transition: all 1s ease-out;
+    cursor: pointer;
 }
 
 
@@ -204,9 +230,14 @@ table {
     margin: 0 auto;
     margin-top: 30px;
 }
+.bg3 a{
+    text-decoration: none;
+}
 .course:hover{
     transform: scale(1.3,1.3);
     color: rgba(26, 216, 210, 0.521);
+    transition: all 1s ease-out;
+    cursor: pointer;
 }
 
 .bg4{
@@ -227,6 +258,17 @@ table {
     width: 336px;
     height: 445px;
     margin-right: 20px;
+    position: relative;
+}
+.triangle{
+    margin-left: 91%;
+    margin-top: 50px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 30px 0 0 30px;
+    border-color: transparent transparent transparent rgb(26,216,211);
+    position: absolute;
 }
 .pen{
     width: 40px;
@@ -264,6 +306,7 @@ table {
 }
 .school:hover{
     color:rgb(207, 206, 206);
+    cursor: pointer;
 }
 .pen2{
     width: 40px;
@@ -301,6 +344,7 @@ table {
 }
 .school2:hover{
     color: rgb(207, 206, 206);
+    cursor: pointer;
 }
 
 
@@ -316,6 +360,7 @@ table {
     color: white;
     font-size: 24px;
     text-align: center;
+    
 }
 .bg5word2{
     width: 20px;
@@ -323,7 +368,7 @@ table {
     margin-top: 16px;
     margin-bottom: 16px;
     padding-top: 1px;
-    margin-left: 49.5%;
+    margin-left: 49.25%;
 }
 .bg5word3{
     color: white;
@@ -351,6 +396,8 @@ table {
 }
 .top:hover{
     transform: scale(1.3,1.3);
+    transition: all 1s ease-out;
+    cursor: pointer;
 }
 
 .footer{
@@ -361,7 +408,7 @@ table {
     height: 80px;
 }
 .contant{
-    font-size: 13px;
+    font-size: 13px; 
 }
 .phone{
     font-size: 13px;
@@ -370,6 +417,7 @@ table {
 .number{
     color: #000;
     padding-left: 24px;
+    letter-spacing: 4px;
 }
 .mail{
     font-size: 13px;
@@ -378,6 +426,7 @@ table {
 .email{
     color: #000;
     padding-left: 24px;
+    letter-spacing: 4px; 
 }
 .fb{
     width: 30px;
@@ -390,7 +439,7 @@ table {
 @media (max-width: 479px){
     .header{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
     }
     .title{
         width: 200px;
@@ -405,6 +454,16 @@ table {
     .frame{
         width: 224px;
         height: 336px;
+    }
+    .triangle{
+        margin-left: 88%;
+        margin-top: 50px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 30px 0 0 30px;
+        border-color: transparent transparent transparent rgb(26,216,211);
+        position: absolute;
     }
     .pen{
         width: 30px;
@@ -421,6 +480,8 @@ table {
     }
     .text{
         font-size: 14px;
+        text-align: center;
+        padding-left: 20px;
     }
     .school{
         font-size: 14px;
@@ -441,6 +502,8 @@ table {
     }
     .text2{
         font-size: 14px;
+        text-align: center;
+        padding-left: 20px;
     }
     .school2{
         font-size: 14px;
@@ -448,6 +511,8 @@ table {
     }
     .bg5word3{
         text-align: left;
+        padding-left: 24px;
+        padding-right: 21px;
     }
     .bg5word3 br{
         content: "";
@@ -455,12 +520,29 @@ table {
     }
     .bg5word4{
         text-align: left;
+        padding-left: 24px;
+        padding-right: 21px;
     }
     .bg5word4 br{
         content: "";
         display: none;
     }
     .bg5word2{
-        margin-left: 49.25%;
+        margin-left: 48%;
+    }
+    .footer{
+        height: 120px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .textgo{
+        width: 78px;
+        position: fixed;
+        right: 0;
+        top: 350px;
+        opacity: 0.7;
     }
 }
