--- a/page1/part3/all.css
+++ b/page1/part3/all.css
@@ -47,14 +47,33 @@ table {
 	border-spacing: 0;
 }
 
-.loading{
+.loading1{
+    z-index: 4;
     width: 100%;
-    height: 900px;
-    background-image: linear-gradient(0deg,rgb(26, 216, 211) 10%, rgb(216, 216, 224) 0%);
+    height: 100%;
+    position: fixed;
+    background: rgb(26, 216, 211);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     padding-top: 200px;
+    transition: all 3s linear;
     animation: transitionOut 1s ease-in;
+    animation-delay: 2s;
+}
+.loading2{
+    z-index: 4;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: rgb(216, 216, 224);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 3s linear;
+    animation: transitionOut 1s ease-in;
+    animation-delay: 2s;
 }
 @keyframes transitionOut {
     100% {
@@ -64,11 +83,23 @@ table {
         transform: translateY(0);
     }
 }
-
 .frontlogo{
     width: 300px;
     position: fixed;
+    transition: all 3s linear;
+    animation : upanddown 2s ease-in;
 }
+@keyframes upanddown{
+    0%   {  margin-bottom: 100px; }
+    75%  {  margin-bottom: -30px; }
+    100% {  margin-bottom: 0px; }
+}
+.box{
+    width: 300px;
+    position: fixed;
+    background: rgb(216, 216, 224);
+}
+
 .header{
     display: flex;
     justify-content: space-between;
@@ -78,7 +109,7 @@ table {
     position: fixed;
     width: 100%;
     padding-left: 5%;
-    z-index: 1;
+    z-index: 3;
 }
 .header a:hover{
     transform: scale(1.2,1.2);
@@ -102,6 +133,26 @@ table {
     color: grey;
     font-size: 16px;
     font-family: "Noto Sans TC";
+}
+
+.hide{
+    display: none;
+    width: 100%;
+    height: 400px;
+    padding-top: 100px;
+    background-color: rgb(243,243,243);
+    position: fixed;
+    z-index: 2;
+}
+.hide2{
+    display: none;
+    width: 100%;
+    height: 350px;
+    margin-top: 400px;
+    background-color: black;
+    opacity: 0.7;
+    position: fixed;
+    z-index: 1;
 }
 .search{
     width: 18px;
@@ -146,14 +197,7 @@ table {
 .microphone:hover{
     cursor: pointer;
 }
-.hide{
-    display: none;
-    width: 100%;
-    height: 400px;
-    padding-top: 100px;
-    background-color: rgb(243,243,243);
-    position: fixed;
-}
+
 
 .textgo{
     width: 78px;
@@ -323,6 +367,7 @@ table {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 0;
 }
 .frame{
     background-image: url(https://frankyeah.github.io/Front-Enter/images/FE_white.png);
